syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

package model;

option go_package = "github.com/axsh/openvdc/model";

message Instance {
  string id = 1;
  string slave_id = 2;
  string resource_id = 3;
  InstanceState last_state = 4;
}

message InstanceState {
  enum State {
    REGISTERED = 0;
    QUEUED = 1;
    STARTING = 2;
    RUNNING = 3;
    STOPPING = 4;
    STOPPED = 5;
    SHUTTINGDOWN = 6;
    TERMINATED = 7;
  }
  State state = 1;
  google.protobuf.Timestamp created_at = 2;
}

message Resource {
  string id = 1;
  enum State {
    REGISTERED = 0;
    UNREGISTERED = 1;
  }
  State state = 3;
  Template template = 4;
}

message Template {
  string template_uri = 1;
  oneof Item {
    NoneTemplate none = 500;
    LxcTemplate lxc = 501;
    NullTemplate null = 502;
  }
}

message NoneTemplate {}

message LxcTemplate {
  int32 vcpu = 1;
  int32 memory_gb = 2;
  int32 min_vcpu = 3;
  int32 min_memory_gb = 4;
  message Image {
    string download_url = 1;
    string chksum_type = 2;
    string chksum = 3;
  }
  Image lxc_image = 5;
  message Interface {
    string type = 1;
    string macaddr = 2;
    string ipv4addr = 3;
    string bridge = 4;
  }
  repeated Interface interfaces = 6;
}

message NullTemplate {}
