syntax = "proto3";

package api;

option go_package = "github.com/axsh/openvdc/api";

import "model.proto";

service Instance {
  rpc Create (CreateRequest) returns (CreateReply){}
  rpc Start (StartRequest) returns (StartReply){}
  rpc Run (ResourceRequest) returns (RunReply){}
  rpc Stop (StopRequest) returns (StopReply){}
  rpc Destroy (DestroyRequest) returns (DestroyReply){}
  rpc Console (ConsoleRequest) returns (ConsoleReply){}
  rpc Show (InstanceIDRequest) returns (InstanceReply){}
}

message RunReply {
  string instance_id = 1;
  string resource_id = 2;
}

message StopRequest{
  string instance_id = 1;
}
message StopReply {
  string instance_id = 1;
}

message DestroyRequest{
  string instance_id = 1;
}
message DestroyReply {
  string instance_id = 1;
}

message ConsoleRequest{
  string instance_id = 1;
}
message ConsoleReply {
  string instance_id = 1;
}

message CreateRequest{
  string resource_id = 1;
}
message CreateReply{
  string instance_id = 1;
}

message StartRequest {
  string instance_id = 1;
}
message StartReply {
  string instance_id = 1;
}

message InstanceIDRequest {
  oneof Key {
    string ID = 1;
    string Name = 2;
  }
}

message InstanceReply {
  string ID = 1;
  model.Instance instance = 2;
}

service Resource {
  rpc Register(ResourceRequest) returns (ResourceReply){}
  rpc Unregister(ResourceIDRequest) returns (ResourceReply){}
  rpc Show(ResourceIDRequest) returns (ResourceReply){}
}

message ResourceRequest {
  model.Template template = 1;
}
message ResourceReply {
  string ID = 1;
  model.Resource resource = 2;
}

message ResourceIDRequest{
  oneof Key {
    string ID = 1;
    string Name = 2;
  }
}
